<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Remove Duplicate</string>
    <string name="title_activity_main__navigation">Main_Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Drawer Items-->
    <string name="nav_home_Item">Home</string>
    <string name="nav_scan_Item">Scan</string>
    <string name="nav_share_Item">Share</string>
    <string name="nav_rate_Us_Item">Rate-Us</string>
    <string name="nav_contact_Item">Contact</string>
    <string name="nav_background_Timer">Background Timer </string>
    <string name="nav_Foreground_Setting">Foreground Setting </string>
    <string name="nav_Setting">Setting </string>
    <string name="nav_Send_Feedback">Send Feedback </string>
    <string name="nav_More_Apps">More Apps</string>
    <string name="nav_Help">Help </string>



    <!--Main Home Screen-->
    <string name="text_Internal_Storage">Internal Storage</string>
    <string name="text_External_Storage">External Storage</string>
    <string name="text_Used_Space">Used Space</string>
    <string name="text_Used_Space_Size">00.0 GB / 00.0 GB</string>
    <string name="Used_Space_Size">15.1 GB</string>
    <string name="text_Used">Used</string>
    <string name="text_Free">Free</string>
    <string name="rectangle_Used_Size">63.0%  Used</string>
    <string name="rectangle_Free_Size">37.0%  Free</string>


    <!--custom dialog Permission-->
    <string name="activity_custom_dialog_permission_TextView1">App Permission</string>
    <string name="activity_custom_dialog_permission_TextView2">In Android 6+ Apps will ask for
        permission once you start using them.</string>
    <string name="readMoreButton">Read More</string>
    <string name="continueButton">Continue</string>


    <!--SharedPreference Heading-->
    <string name="MY_PREFS_NAME">@string/app_name</string>
    <string name="keyValue">WhatsApp_Path</string>
    <string name="background_Service_Working">Background Service Working</string>
    <string name="foreground_Service_Working">Foreground Service Working</string>
    <string name="task_A_NextDate">Task A NextDate</string>
    <string name="task_B_NextDate">Task B NextDate</string>
    <string name="task_C_NextDate">Task C NextDate</string>
    <string name="task_A_Done">Task A Done</string>
    <string name="task_B_Done">Task B Done</string>
    <string name="task_C_Done">Task C Done</string>


    <!--first time check flash screen-->
    <string name="isFirstTimeLaunch">Is First Time Launch</string>

    <!--Custom Dialog SD Card Permission-->
    <string name="SdCardTextView">Select Sd Card</string>
    <string name="SdCardTextView1">Please Choose Sd Card
        To Grant Permission for Write or Remove In It....(Root Directory For Sd Card )</string>


    <!-- Scan Activity-->
    <string name="file_Size_Text">Data Size - %1$s</string>
    <string name="scan_Button_Text">Scan</string>
    <string name="internal_Text_View">Internal</string>
    <string name="external_Text_View">External</string>

    <!-- Duplicate Data-->
    <string name="showDuplicateTitle">Duplicate Data</string>
    <string name="no_duplicate_found">No Duplicate Found :)</string>
    <string name="delete_Duplicate_Button_text">Delete</string>
    <string name="under_list_view_name_text">No Name</string>

    <!--share-->
    <string name="shareText">Check This App WhatsApp Media Mover (Easy Way To Move Your WhatsApp Data To Sd Card</string>
    <string name="custom_dialog_no">No</string>
    <string name="custom_dialog_yes">Yes</string>
    <string name="custom_notification_text">Please allow notification soo we can show your progress Status.</string>
    <string name="custom_notification_permission_heading">Notification Permission</string>


    <!--Notfication CHannel Name-->
    <string name="delete_Done_title">Successfully Data Deleted</string>
    <string name="file_found_title">File Found</string>
    <string name="transfer_Done_Id">Transfer Done Id </string>
    <string name="duplicate_title">Duplicate</string>
    <string name="duplicate_Id">Duplicate Id </string>


    <!--Slide Information-->
    <string name="slide_1_title">Duplicate Data</string>
    <string name="slide_1_desc">Scan And Remove The Duplicate Data</string>
    <string name="slide_2_title">Background Timer</string>
    <string name="slide_2_desc">Delete Duplicate Data Automatically</string>
    <string name="slide_3_title">Storage Stats</string>
    <string name="slide_3_desc">Storage Analysis &amp; Storage Stats</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>

    <!--Error Message-->
<!--    <string name="errorMes">Please Select the Sd Card Root Directory</string>-->

    <!--Download Folder Empty-->
    <string name="nothing_text">Nothing!!</string>
    <string name="noDuplicateFoundText">There is no duplicate Found.</string>

    <!--share app-->
    <string name="shareMessage">Hey, check This App which helps you to Delete Duplicate and Unnecessary Data from the phone -</string>

    <string name="interstitial_ad_unit_id">ca-app-pub-3940256099942544/8691691433</string>


    <!--Foreground setting heading-->
    <string name="foreground_Setting_Text">Foreground Service</string>
    <string name="Choose_Ok_Text">OK</string>
    <string name="Choose_Cancel_Text">Cancel</string>
    <string name="setting_Heading_Text">Setting</string>
    <string name="custom_Dialog_Box_Heading">Foreground Service</string>
    <string name="custom_Dialog_Box_Text">Are you sure to stop all your background Task?</string>


    <!-- Foreground Service Setup-->
    <string name="stop_Foreground_Service">Stop Service</string>
    <string name="why_This_Foreground_Service">Why This ? </string>

    <!--foreground service custom dialog-->
    <string name="custom_Foreground_Permission">Smart phone are more restrict about background Process from which our background task not working So if you want to us to run background task
        follow the steps which is given on that Website .</string>
    <string name="custom_Foreground_Permission_Know">I know</string>
    <string name="see_more_text">See More</string>
    <string name="background_restriction_text">Background Restriction</string>

    <string name="errorMesSdCard">Only Select the Sd Card Directory</string>
    <string name="errorMesExternal">Only Select the Internal Card Directory</string>
    <string name="wrongDirectorySelected">You select the wrong directory</string>
    <string name="reportIt">There is Error Please Report It</string>


    <!--Sd Card Path SharedPreference-->
    <string name="sdCardPath">Sd Card Path</string>
    <string name="sdCardStringUri"> Sd Card String URI</string>

    <!--External Storage Path SharedPreference-->
    <string name="externalPath">External Path</string>
    <string name="externalStringUri"> External String URI</string>

    <!--Background Task-->
    <string name="background_Timer_Heading">What You Like ?</string>
    <string name="timer_icon">Timer icon</string>
    <string name="Choose_Ok">OK</string>
    <string name="Choose_Cancel">Cancel</string>

    <!--custom weekdays Setup-->
    <string-array name="customWeekdaysSetup" tools:ignore="TypographyFractions">
        <item>No Day Selected</item>
        <item>At Every 1/2 Day</item>
        <item>At Every 1 Day</item>
        <item>At Every 2 Day</item>
        <item>Custom WeekDay</item>
        <item>Once A Month(Same Date)</item>
    </string-array>

    <!--Default Date-->
    <string name="today_Date">Today</string>
    <string name="yesterday_Date">Yesterday</string>
    <string name="tomorrow_Date">Tomorrow</string>

    <string name="setting_Updated">Setting Updated</string>

    <!--Info Layout-->
    <string name="info_NameText">Name : </string>
    <string name="info_LocationText">Location : </string>
    <string name="info_SizeText">Size : </string>
    <string name="info_TypeText">Type : </string>
    <string name="info_ExtText">Ext : </string>
    <string name="info_CreatedText">Created : </string>
    <string name="open_text">Open</string>

<!--    dialog more option-->
    <string name="option_fileName">File Name</string>
    <string name="option_openFile">Open File</string>
    <string name="option_viewFolder">View in folder</string>
    <string name="option_moreInfo">More Information</string>
    <string name="sureToDelete">Are You Sure To Delete ?</string>
    <string name="selectStorageText">You Supposed To Select Storage</string>

    <string name="giveUsPermission">Give us permission for further process</string>
    <string name="ShowInNotification">Open your notification bar for progress status</string>
    <string name="alreadyProgress">There is already progress in your notification bar</string>
    <string name="supportAboveSdCard">Sorry , We don\'t support sd card at this android version </string>
    <string name="noHandlerForType">No handler for this type of file_icon.</string>
    <string name="backImageViewChange">back_Image_View_Change</string>


</resources>
