<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="3dp"
    android:background="#ffffff"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="serif"
        android:paddingStart="@dimen/refresh_ImageView_Margin_Right"
        android:paddingTop="@dimen/arrow_Image_View_margin_start"
        android:paddingBottom="@dimen/arrow_Image_View_margin_start"
        android:text="@string/custom_notification_permission_heading"
        android:textColor="#000000"
        android:textSize="19sp"
        android:textStyle="bold"
        android:typeface="normal"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:alpha="0.8"
        android:paddingLeft="@dimen/refresh_ImageView_Margin_Right"
        android:paddingTop="@dimen/arrow_Image_View_margin_start"
        android:paddingRight="@dimen/refresh_ImageView_Margin_Right"
        android:paddingBottom="@dimen/arrow_Image_View_margin_start"
        android:text="@string/custom_notification_text"
        android:textColor="#000000"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:visibility="invisible"
            tools:ignore="NestedWeights" />

        <Button
            android:id="@+id/no_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/custom_dialog_no"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/yes_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#ffffff"
            android:text="@string/custom_dialog_yes"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />
    </LinearLayout>

</LinearLayout>