<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_Color">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="16dp">

            <ImageView
                android:id="@+id/back_Image_View_Change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingEnd="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/back_arrow_icon"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/toolbar_title"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="16dp"
                android:fontFamily="@font/lato"
                android:text="@string/setting_Heading_Text"
                android:textColor="#FFFFFF"
                android:textSize="22sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/back_Image_View_Change"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/head_Text_View"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_marginTop="30dp"
        android:fontFamily="serif"
        android:text="@string/foreground_Setting_Text"
        android:textColor="#000000"
        android:textSize="22sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/cancelButton"
        app:layout_constraintEnd_toStartOf="@+id/switchForeground"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:background="@android:color/transparent"
        android:paddingBottom="0dp"
        android:text="@string/Choose_Cancel_Text"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok_Button"
        app:layout_constraintTop_toBottomOf="@+id/head_Text_View"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/ok_Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:text="@string/Choose_Ok_Text"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchForeground"
        app:layout_constraintVertical_bias="1.0" />

    <Switch
        android:id="@+id/switchForeground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:checked="true"
        android:theme="@style/SCBSwitch"
        app:layout_constraintBottom_toTopOf="@+id/ok_Button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/head_Text_View"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>